Fixing wrong background image and icons

--- a/generators/app/templates/src/app/card/card.component.css
+++ b/generators/app/templates/src/app/card/card.component.css
@@ -17,16 +17,15 @@
   width: 740px;
   height: 500px;
   margin: 0 auto;
-  border: 1px solid #666;
-  box-shadow: #666 1px 1px 4px;
+  border: 1px solid #ccc;
+  box-shadow: #ccc 1px 1px 4px;
 }
 
 .profile-fields-container .profile-image-container {
   height: 200px;
   width: 100%;
-  background-image: url('/assets/images/Solid_Pattern_thumb.png');
   background-size: cover;
-  background-position: center center;
+  background: url('/assets/images/Solid_Pattern.png') center center;
 }
 
 .profile-fields-container .profile-image-container img {
